# M1C2_TFMISD

./: .gitignore  CMakeLists.txt  main.c  mingw-toolchain.cmake
include/: addition.h  imag.h
lab1/: build-win.sh  build.sh
lab1/include/: addition.h  multiplication.h  utility.h
lab1/src/: addition.c  cli.c  utility.c
lab2/: CMakeLists.txt  build-win.sh  build.sh
lab2/data/: input.txt
lab2/include/: cli.h  modified_dfs.h
lab2/src/: cli.c  modified_dfs.c
lab3/: CMakeLists.txt  build-win.sh  build.sh  main.c
lab3/include/: logical_eval.h  semantic_table.h
lab3/src/: cli.c  logical_eval.c  semantic_table.c
lab4/: CMakeLists.txt  build-win.sh  build.sh  main.c
lab4/include/: catalan.h
lab4/src/: catalan.c  cli.c
lab5/: CMakeLists.txt  build-win.sh  build.sh
lab5/include/: math_functions.h
lab5/src/: cli.c  math_functions.c
src/: addition.c  image.c  multiplication.c  utility.c
